# SceneNetRGB-D

./: BUILDNOTES.md  README.md
brute/: README.md
brute/generation_and_rendering_scripts/: generate_scenes.sh  generate_trajectories.sh  render_scenes.sh
brute/processing_scripts/: Final.ipynb  parse_files.py  processing.py
camera_trajectory_generator/: camera_trajectory_generator.cpp
generation_and_rendering_scripts/: generate_trajectories.sh
generation_scripts/: generate_scenes.sh
renderer/CMakeModules/: FindCVD.cmake
renderer/src/: locationConfig.h.in  rendererConfig.h  scenenet_render.cpp
renderer/src/Geometry/: AAB.cu  AABInstance.h  GeometryInstance.cpp  Sphere.cu  parallelogram.cu
renderer/src/Material/: Diffuse.h  DiffuseEmitter.cpp  DiffuseEmitter.h  Glass.cu  Glass.h  ParticipatingMedium.cu  SpecularTexture.cpp  SpecularTexture.cu  SpecularTexture.h  Texture.cu  Texture.h
renderer/src/Math/: AAB.h  Sphere.h
renderer/src/Renderer/: Light.cpp  Light.h  OptixRenderer.h  RandomState.h  RayType.h
renderer/src/Renderer/Helpers/: light.h  optix.h  samplers.h  store_photon.h
renderer/src/Renderer/PhotonMapping/: PhotonPRD.h
renderer/src/Scene/: SceneNet.h
renderer/src/Util/: check_polygon_polygon_intersection.h  ptxpath.h
renderer/src/Util/Mesh/: triangle_mesh_iterative.cu
renderer/src/Util/sutil/: sutil.cpp
renderer/src/Util/tinyobjloader/: obj_writer.cc  tiny_obj_loader.cc
scene_generator/: CMakeLists.txt  README.md  scenenet_room_generator.cpp
scene_generator/textfiles/: test_layouts.txt  test_split_filtered_model_info_and_texture.txt  val_layouts.txt  val_split_filtered_model_info_and_texture.txt
src/: BUILDNOTES.md  LICENSE.txt  requirements.txt
src/camera_trajectory_generator/: CMakeLists.txt  README.md
src/camera_trajectory_generator/CMakeModules/: FindCVD.cmake
src/camera_trajectory_generator/assimpobjloader/: assimp_obj_loader.h
src/camera_trajectory_generator/trajectoryGenerator/: TrajectoryGenerator.cpp  TrajectoryGenerator.hpp
src/renderer/: CMakeLists.txt  README.md
src/renderer/CMakeModules/: FindCUDA.cmake  FindOptiX.cmake
src/renderer/src/CameraModels/: pinhole_camera.cu
src/renderer/src/Geometry/: AABInstance.cpp  SphereInstance.cpp  SphereInstance.h  TriangleMesh.cu  TriangleMeshLayout.cu
src/renderer/src/Material/: Diffuse.cpp  Diffuse.cu  DiffuseEmitter.cu  Glass.cpp  GroundTruthMaterial.cu  Material.cpp  Material.h  Mirror.cpp  Mirror.cu  Mirror.h  ParticipatingMedium.cpp  ParticipatingMedium.h  SpecularDiffuse.cpp  SpecularDiffuse.cu  SpecularDiffuse.h  Texture.cpp
src/renderer/src/Math/: Vector3.cpp  Vector3.h
src/renderer/src/Renderer/: Hitpoint.h  OptixEntryPoint.h  OptixRenderer.cpp  OptixRenderer_CPUKdTree.cpp  OptixRenderer_SpatialHash.cu  RadiancePRD.h
src/renderer/src/Renderer/Helpers/: random.h
src/renderer/src/Renderer/PhotonMapping/: DirectRadianceEstimation.cu  GroundTruthGenerator.cu  IndirectRadianceEstimation.cu  Output.cu  Photon.h  PhotonGenerator.cu  PhotonGrid.h  PostProcess.cu  RayGeneratorPPM.cu  UniformGridPhotonInitialize.cu  VolumetricPhotonSphereRadiance.cu
src/renderer/src/Scene/: .Cornell.cpp.swp  .Cornell.h.swp  .SceneNet.cpp.swp  IScene.cpp  IScene.h  SceneNet.cpp  SceneNetCamera.cpp  SceneNetCamera.h
src/renderer/src/Util/: mesh_utils.h
src/renderer/src/Util/sutil/: CMakeLists.txt  Mesh.cpp  sampleConfig.h.in
src/renderer/src/Util/tinyobjloader/: obj_sticher.cc
src/scene_generator/textfiles/: ShapeNetsSUNRGBDMapping.txt  objects_in_scene.txt  train_layouts.txt  wnid_sample_probabilities.txt
